--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,28 @@
 plugins {
+    id 'application'
+    id 'java'
+    id 'jacoco'
+    id 'checkstyle'
+    id 'pmd'
     id 'org.ajoberstar.grgit' version '4.1.1'
+    id "org.sonarqube" version "3.3"
+
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ['-Xdoclint:none', '-Xlint:none', '-nowarn']
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "gaelkalume_megamek"
+        property "sonar.login", "6b02965550bc0e2bccb76902aab953f1af062d8a"
+        property "sonar.organization", "gaelkalume"
+        property "sonar.host.url", "https://sonarcloud.io"
+        property "sonar.sourceEncoding", "UTF-8"
+        property "sonar.sources", "src"
+        property "sonar.branch", "master"
+    }
 }
 
 allprojects {
